# constellar

./: .env  .gitignore  Cargo.toml  docker-compose.yml
constellar-core/: Cargo.toml  build.rs
constellar-core/src/: lib.rs  main.rs
constellar-core/src/protos/: ccore.proto
constellar-core/src/server/: server.rs
constellar-driver/: Cargo.toml  build.rs  grpcurl_message.txt
constellar-driver-cli/: Cargo.toml
constellar-driver-cli/src/: cli.rs  lib.rs  main.rs
constellar-driver-cli/src/cmd/: cli.rs  health.rs  mod.rs  server.rs
constellar-driver-manager/: Cargo.toml  build.rs
constellar-driver-manager/src/: lib.rs  main.rs
constellar-driver-manager/src/driver/: driver.proto  driver.rs  mod.rs
constellar-driver-manager/src/driver/engine/: access.rs  connection.rs  mod.rs  pool.rs  session.rs  stash.rs
constellar-driver-manager/src/driver/sql/: column.rs  mod.rs
constellar-driver-manager/src/driver_manager/: driver_manager.proto  manager.rs
constellar-driver/.nvim/: launch.json
constellar-driver/src/: builder.rs  client.rs  driver.proto  driver.rs  lib.rs  main.rs  server.rs
constellar-driver/src/cli/: cli.rs  client.rs  health.rs  mod.rs  service.rs
constellar-driver/src/client/: client.rs  health.rs  mod.rs
constellar-driver/src/drivers/postgres/: backend.rs  connection.rs  cursor.rs  exec.rs  executor.rs  mod.rs  params.rs  result.rs
constellar-driver/src/drivers/postgres/typing/: mod.rs  numerical.rs  text.rs  typing.rs
constellar-driver/src/engine/: access.rs  backend.rs  connection.rs  cursor.rs  data_source.rs  mod.rs  pool.rs  query.rs  result.rs  session.rs  stash.rs  typing.rs
constellar-driver/src/grpc/: cdriver.rs  driver.proto  mod.rs
constellar-driver/src/sql/: mod.rs
