[package]
name = "constellar-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "51.0.0"
clap = "4.5.7"
daemonize = "0.5.0"
futures-util = "0.3.30"
prost = "0.12.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
tonic-build = "0.11.0"
uuid = {version = "1.8.0", features = ["v4"]}

[build-dependencies]
tonic-build = "0.11.0"

